k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    name: voting-app
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
